--- a/assets/css/fit-trackr.css
+++ b/assets/css/fit-trackr.css
@@ -14,7 +14,6 @@
     width:50px;
 	
 }
-
 .dropdown
 {
 	color: white;
@@ -25,4 +24,6 @@
 {
 	height: 100px;
 	overflow: auto;
+	float: right;
+	color: white;
 }
