--- a/assets/css/fit-trackr.css
+++ b/assets/css/fit-trackr.css
@@ -14,6 +14,17 @@
     width:50px;
 	
 }
+
+.cardio_submission
+{
+	color: white;
+	position:fixed;
+    top:30%;
+    left:45%;
+    width:50px;
+	
+}
+
 .dropdown
 {
 	color: white;
